# Mandelbrot

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mandelbrot-video.cfg  video.cpp
include/: rgb.h
scripts/: palette.py  video.py
src/app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/logic/: CMakeLists.txt  calc.cpp  calc.h
src/video/: CMakeLists.txt  config.h  config_parser.cpp  config_parser.h  zoomer.cpp  zoomer.h
